<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="text_search">Поиск</string>
    <string name="text_media">Медиатека</string>
    <string name="text_options">Настройки</string>
    <string name="back_button">Кнопка возврата назад</string>
    <string name="black_topic">Темная тема</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="share_play_list">Поделиться</string>
    <string name="edit_play_list">Редактировать информацию</string>
    <string name="delete_play_list">Удалить плейлист</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="share_uri">https://practicum.yandex.ru/android-developer/</string>
    <string name="terms_uri">https://yandex.ru/legal/practicum_offer/</string>
    <string name="messenger_choose">Выберите мессенджер</string>
    <string name="browser_choose">Выберите браузер</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail">Kazesteam@yandex.ru</string>
    <string name="clear_button">Кнопка очистки</string>
    <string name="max_lines_one">1</string>
    <string name="max_length">20</string>
    <string name="album_image">Изображение альбома</string>
    <string name="dot">dot</string>
    <string name="play">play</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверте подключение к интернету</string>
    <string name="connection_error_toast">Не удалось воспроизвести трек. Проверте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="u_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="add_to_catalog">Добавить в каталог</string>
    <string name="play_pause">Воспроизвести</string>
    <string name="add_to_favourite">Добавить в избранное</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="playback_progress">0:30</string>
    <string name="play_error">Не удалось воспроизвести трек</string>
    <string name="media_library">Медиатека</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="not_create_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="track_list_is_empty">В плейлист не был добавлен \nни один трек</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="play_lists">Плейлисты</string>
    <string name="new_play_list">Новый плейлист</string>
    <string name="add_image">Добавить изображение</string>
    <string name="name_of_album">Название*</string>
    <string name="description">Описание</string>
    <string name="Create">Создать</string>
    <string name="DescriptionOfPermission">Разрешение необходимо для обложки.</string>
    <string name="PlayListCreateFragmentDialogTitle">Завершить создание плейлиста?</string>
    <string name="PlayListCreateFragmentDialogMessage">Все несохраненные данные будут потеряны</string>
    <string name="Cancel">Отмена</string>
    <string name="Complete">Завершить</string>
    <string name="play_list_created">Плейлист %s создан</string>
    <string name="added_to_play_list">Добавленно в плейлист %s</string>
    <string name="already_added_to_play_list">Трек уже добавлен в плейлист %s</string>
    <string name="add_to_play_list">Добавить в плейлист</string>
    <string name="want_to_delete_a_track">Хотите удалить трек?</string>
    <string name="want_to_delete_a_play_list">Хотите удалить плейлист %s?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>

    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>