<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mediaLibrary.ui.MediaLibraryFragment">

    <Button
        android:id="@+id/newPlaylistButton"
        style="@style/newPlaylistButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_playlist"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_24dp"
        android:contentDescription="@string/nothing_was_found"
        android:src="@drawable/light_mode_nothing" />

    <TextView
        style="@style/MediaLibraryErrorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_create_playlist" />

</LinearLayout>