<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/playListCreateBackgroundColor"
    android:orientation="vertical"
    tools:context=".playListCreate.ui.PlayListCreateFragment">

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button"
            android:src="@drawable/arrow_back" />

        <TextView
            style="@style/TextViewToolbarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_24dp"
            android:text="@string/new_play_list" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageViewAddPic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:layout_marginHorizontal="@dimen/_24dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_32dp"
        android:contentDescription="@string/add_image"
        android:src="@drawable/pic_place"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/PlayListCreateEditTextStyle"
        android:id="@+id/textInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_album"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name_of_album"
            tools:text="@string/name_of_album"
            android:inputType="textCapWords"
            android:textSize="@dimen/_16sp"
            android:textColor="?attr/playListCreateEditTextHintColor"
            android:fontFamily="@font/ys_display_regular"
            android:textFontWeight="400"/>

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        style="@style/PlayListCreateEditTextForHintStyle"
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/description"
        android:hint="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/centerBorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/PlayListButtonCreateStyle"
        android:id="@+id/buttonCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Create"
        android:background="@drawable/play_list_button_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>