<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mediaLibrary.ui.favourite.FavouriteTracksFragment">

    <Button
        android:id="@+id/newPlaylistButton"
        style="@style/newPlaylistButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_playlist"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/imageViewEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_24dp"
        android:contentDescription="@string/nothing_was_found"
        android:src="@drawable/light_mode_nothing"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/textViewEmpty"
        style="@style/MediaLibraryErrorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/media_library_is_empty"
        android:visibility="visible"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwFavouriteTracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app1:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="15"
        tools:listitem="@layout/track_item"
        android:visibility="gone"/>

</LinearLayout>