<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_maker"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/_22sp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/text_search"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textFontWeight="500"
        android:textSize="@dimen/_22sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="3dp"
        app:iconTint="@color/gray" />

    <Button
        android:id="@+id/mediaButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/text_media"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textFontWeight="500"
        android:textSize="@dimen/_22sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="3dp"
        app:iconTint="@color/gray" />

    <Button
        android:id="@+id/optionButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/text_options"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textFontWeight="500"
        android:textSize="@dimen/_22sp"
        app:cornerRadius="16dp"
        app:icon="@drawable/option"
        app:iconGravity="textStart"
        app:iconPadding="3.4dp"
        app:iconTint="@color/gray" />

</LinearLayout>