<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/settingsBackgroundColor"
    android:orientation="vertical"
    app:ignore="NamespaceTypo">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app1:title="@string/text_options"
        app1:titleTextAppearance="@style/TextViewToolbarStyle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/SwitchStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:foreground="?android:attr/selectableItemBackground"
        app:ignore="UseSwitchCompatOrMaterialXml"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/MTVShare"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/share"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/MTVSupport"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/MTVTerms"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/terms_of_use"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/terms_of_use" />


</LinearLayout>