<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/mediaBackgroundColor"
    tools:context=".media.ui.MediaActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_button"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toTopOf="@+id/imageViewAlbum"
        app:layout_constraintStart_toEndOf="@+id/leftBorder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <ImageView
        android:id="@+id/imageViewAlbum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_24dp"
        android:layout_marginTop="@dimen/_48dp"
        android:contentDescription="@string/album_image"
        android:scaleType="centerCrop"
        android:src="@drawable/place_holder"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <TextView
        android:id="@+id/textViewTrackName"
        style="@style/MediaTrackNameTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textViewArtistName"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/imageViewAlbum"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Track name" />

    <TextView
        android:id="@+id/textViewArtistName"
        style="@style/MediaArtistNameTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageViewPlay"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/textViewTrackName"
        tools:text="Artist name" />

    <ImageView
        android:id="@+id/imageViewCatalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:contentDescription="@string/add_to_catalog"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPlay"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="@+id/imageViewPlay"
        app:srcCompat="@drawable/catalog" />

    <ImageView
        android:id="@+id/imageViewPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:contentDescription="@string/play_pause"
        app:layout_constraintBottom_toTopOf="@+id/textViewPlayTime"
        app:layout_constraintEnd_toStartOf="@+id/imageViewFavourite"
        app:layout_constraintStart_toEndOf="@+id/imageViewCatalog"
        app:layout_constraintTop_toBottomOf="@+id/textViewArtistName"
        app:srcCompat="@drawable/play_button"
        app:tint="?attr/playButtonTextColor" />

    <ImageView
        android:id="@+id/imageViewFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8dp"
        android:contentDescription="@string/add_to_favourite"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPlay"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintTop_toBottomOf="@+id/textViewArtistName"
        app:layout_constraintTop_toTopOf="@+id/imageViewPlay"
        app:srcCompat="@drawable/favourite" />

    <TextView
        android:id="@+id/textViewPlayTime"
        style="@style/PlayTimeTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12dp"
        android:text="@string/playback_progress"
        app:layout_constraintBottom_toTopOf="@+id/centerBorder"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPlay" />

    <TextView
        android:id="@+id/textViewDuration"
        style="@style/MediaDescriptionsTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@+id/textViewAlbum"
        app:layout_constraintEnd_toStartOf="@+id/textViewDurationData"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/centerBorder"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewAlbum"
        style="@style/MediaDescriptionsTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@+id/textViewYear"
        app:layout_constraintEnd_toStartOf="@+id/textViewAlbumData"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/textViewDuration" />

    <TextView
        android:id="@+id/textViewYear"
        style="@style/MediaDescriptionsTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@+id/textViewGenre"
        app:layout_constraintEnd_toStartOf="@+id/textViewYearData"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlbum" />

    <TextView
        android:id="@+id/textViewGenre"
        style="@style/MediaDescriptionsTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@+id/textViewCountry"
        app:layout_constraintEnd_toStartOf="@+id/textViewGenreData"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/textViewYear" />

    <TextView
        android:id="@+id/textViewCountry"
        style="@style/MediaDescriptionsTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewCountryData"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/textViewGenre" />

    <TextView
        android:id="@+id/textViewDurationData"
        style="@style/MediaDescriptionsDataTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewDuration"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@+id/textViewDuration"
        tools:text="5:35" />

    <TextView
        android:id="@+id/textViewAlbumData"
        style="@style/MediaDescriptionsDataTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewAlbum"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@+id/textViewAlbum"
        tools:text="Album nameAlbum nameAlbum nameAlbum nameAlbum nameAlbum name" />

    <TextView
        android:id="@+id/textViewYearData"
        style="@style/MediaDescriptionsDataTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewYear"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@+id/textViewYear"
        tools:text="2004" />

    <TextView
        android:id="@+id/textViewGenreData"
        style="@style/MediaDescriptionsDataTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewGenre"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@+id/textViewGenre"
        tools:text="Rock" />

    <TextView
        android:id="@+id/textViewCountryData"
        style="@style/MediaDescriptionsDataTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewCountry"
        app:layout_constraintEnd_toStartOf="@id/rightBorder"
        app:layout_constraintStart_toEndOf="@+id/textViewCountry"
        tools:text="@string/country" />


</androidx.constraintlayout.widget.ConstraintLayout>